--- a/email.html
+++ b/email.html
@@ -299,5 +299,6 @@
       </tr>
     </table>
   </div>
+	<div class="footer"> Banu AĞGÜN Copyright © 2020 - 2021 All Rights Reserved </div>
 </body>
 </html>
